feat: add after and before in hero, section control and move body settings in _settings.sass

--- a/index.html
+++ b/index.html
@@ -42,12 +42,30 @@
                   <button class="button hero__button button--primary">Рассчитать стоимость</button>
                   <button class="button hero__button button--outline">Отправить заявку</button>
             </div>
-          <!-- /.hero__content -->
+          
         </div>
         <!-- /.container -->
           <a href="#" class="hero__scroll-down">Листайте вниз</a>
-
+     </section>
+      <!-- /.hero__content -->
+      <section class="section control">
+          <div class="container">
+              <div class="section-title">
+                  <h2 class="section-title__heading">
+                      Онлайн контроль
+                  </h2>
+                  <!-- /.section-title__heading -->
+                  <div class="section-title__image">
+                      <img src="img/video.svg" alt="video">
+                  </div>
+                  <!-- /.section-title__image -->
+              </div>
+              <!-- /.sectoin-title -->
+          </div>
+          <!-- /.container -->
       </section>
+      <!-- /.section control -->
+
   </main>
 </body>
 </html>
