--- a/index.html
+++ b/index.html
@@ -309,7 +309,31 @@
           <!-- /.container -->
       </section>
       <!-- /.section dezign -->
+<div class="modal">
+    <div class="modal__dialog">
+        <button class="modal__close"></button>
+        <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами</h3>
+        <form action="#" class="form modal__form">
+            <label for="user-name" class="label form__label label__light">Имя</label>
+            <input type="text" class="input modal__input form__input" id="user-name" placeholder="Как вас зовут:">
+            <label for="user-phone" class="label form__label label__light">Телефон</label>
+            <input type="tel" class="input modal__input form__input" id="user-phone" placeholder="Ваш номер телефона:">
+            <label for="user-email" class="label form__label label__light">Email</label>
+            <input type="email" class="input modal__input form__input" id="user-email" placeholder="Ваш email:">
+        </form>
+        <!-- /.form modal__form -->
+        <div class="policy modal__policy">
+            <input type="checkbox" name="policy-checkbox" class="input policy__checkbox" id="policy-checkbox" checked>
+            <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
+        </div>
+        <button class="button button--primary modal__button">отправить заявку</button>
+    
 
+        <!-- /.policy modal__policy -->
+    </div>
+    <!-- /.modal__dialog -->
+</div>
+<!-- /.modal -->
   </main>
 </body>
 </html>
