--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 </div>
 <!-- /.modal -->
   </main>
-
-  <script src="../js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
