feat: video fon in control

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           <a href="#" class="hero__scroll-down">Листайте вниз</a>
      </section>
       <!-- /.hero__content -->
-      <section class="section control">
+      <section class="section control" data-vide-bg="video/coverr-raindrops--1572170453303">
           <div class="container">
-              <div class="section-title">
+              <div class="section-title section-title__control">
                   <h2 class="section-title__heading">
                       Онлайн контроль
                   </h2>
@@ -344,6 +344,7 @@
 <!-- /.modal -->
   </main>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="../js/jquery.vide.min.js"></script>
 <script src="../js/main.js"></script>
 </body>
 </html>
