refact: rewrite for media

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="dezign__fon"></div>     
           <div class="container">
             <div class="section-title types__section-title">
-                <h2 class="section-title__heading">
+                <h2 class="section-title__heading section-title__heading--dezign">
                     Дизайн проект
                 </h2>
                 <!-- /.section-title__heading -->
