refact: rewrite links or JS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,34 @@
           <a href="#" class="hero__scroll-down">Листайте вниз</a>
      </section>
       <!-- /.hero__content -->
-      <section class="section control" data-vide-bg="video/coverr-raindrops--1572170453303">
+      <section class="section section--dark prijects">
+          <div class="container">
+            <div class="row">
+                <div class="col-50">
+                    <div class="section-title section-title--left section-title__control">
+                        <h2 class="section-title__heading section-title__heading--primary">
+                            Завершенные проекты
+                        </h2>
+                        <!-- /.section-title__heading -->
+                        <p class="section-title__text section-title__text--light">На сайте представлена ​​лишь небольшая часть работ, 
+                            выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили 
+                            более 1000 семей</p>
+                    </div>
+                    <!-- /.sectoin-title -->
+                </div>
+                <!-- /.col-50 -->
+                <div class="col-50">
+
+                </div>
+                <!-- /.col-50 -->
+            </div>
+            <!-- /.row -->
+          </div>
+          <!-- /.container -->
+
+      </section>
+      <!-- /.section prijects -->
+      <section class="section control" /*data-vide-bg="video/coverr-raindrops--1572170453303"*/>
           <div class="container">
               <div class="section-title section-title__control">
                   <h2 class="section-title__heading">
@@ -79,7 +106,7 @@
             </div>
             <!-- /.sectoin-title -->
             <div class="row">
-                <div class="col">
+                <div class="col-30">
                     <div class="card types__card">
                         <img src="img/type_1.jpg" alt="Косметический ремонт" class="card__image">
                         <div class="card__text">
@@ -112,7 +139,7 @@
                     <!-- /.card -->
                 </div>
                 <!-- /.col -->
-                <div class="col">
+                <div class="col-30">
                     <div class="card types__card">
                         <img src="img/type_2.jpg" alt="Капитальный ремонт" class="card__image">
                         <div class="card__text">
@@ -144,7 +171,7 @@
                     <!-- /.card -->
                 </div>
                 <!-- /.col -->
-                <div class="col">
+                <div class="col-30">
                     <div class="card types__card">
                         <img src="img/type_3.jpg" alt="Дизайнерский ремонт" class="card__image">
                         <div class="card__text">
@@ -204,7 +231,7 @@
             <!-- /.sectoin-title -->
             
                 <div class="row">
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card">
                             <img src="img/type_1.jpg" alt="Минимальный" class="card__image">
                             <div class="card__text">
@@ -230,7 +257,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card">
                             <img src="img/design_2.jpg" alt="Стандартный" class="card__image">
                             <div class="card__text">
@@ -262,7 +289,7 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="col-30">
                         <div class="card">
                             <img src="img/design_3.jpg" alt="Полный" class="card__image">
                             <div class="card__text">
@@ -343,8 +370,8 @@
 </div>
 <!-- /.modal -->
   </main>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="../js/jquery.vide.min.js"></script>
-<script src="../js/main.js"></script>
+<script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/jquery.vide.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
