refact: rewrite links for JS files

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <img src="img/design.svg" alt="design">
                 </div>
                 <!-- /.section-title__image -->
-                <div class="section-title__text">
+                <div class="section-title__text--dezign">
                     Дизайн-проект не только помогает сделать ремонт 
                     вашей квартиры более современным, но и значительно 
                     удешевляет материалы и сокращает время ремонтных работ
@@ -370,7 +370,7 @@
 </div>
 <!-- /.modal -->
   </main>
-<script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="js/jquery.vide.min.js"></script>
 <script src="js/main.js"></script>
 </body>
