feat: add video fon

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       </section>
       <!-- /.section prijects -->
-      <section class="section control" /*data-vide-bg="video/coverr-raindrops--1572170453303"*/>
+      <section class="section control" data-vide-bg="video/coverr-raindrops--1572170453303"*>
           <div class="container">
               <div class="section-title section-title__control">
                   <h2 class="section-title__heading">
