refact: rewrite projects

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="container">
             <div class="row">
                 <div class="col-50">
-                    <div class="section-title section-title--left section-title__control">
-                        <h2 class="section-title__heading section-title__heading--primary">
-                            Завершенные <span class="section-title__word">проекты</span> 
+                    <div class="prijects-title">
+                        <h2 class="prijects-title__heading prijects-title__heading--primary">
+                            Завершенные <span class="prijects-title__word">проекты</span> 
                         </h2>
                         <!-- /.section-title__heading -->
-                        <p class="section-title__text section-title__text--light">На сайте представлена ​​лишь небольшая часть работ, 
+                        <p class="prijects-title__text prijects-title__text--light">На сайте представлена ​​лишь небольшая часть работ, 
                             выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили 
                             более 1000 семей</p>
                         </div>
@@ -162,7 +162,7 @@
       <!-- /.section prijects -->
       <section class="section control" data-vide-bg="video/coverr-raindrops--1572170453303"*>
           <div class="container">
-              <div class="section-title section-title__control">
+              <div class="section-title">
                   <h2 class="section-title__heading">
                       Онлайн контроль
                   </h2>
@@ -425,8 +425,40 @@
         
       </section>
       <!-- /.section dezign -->
-<section class="steps steps_fon">
+<section class="section section--dark section__steps">
+    <div class="container">
+        <div class="row">
+            <div class="col-30">
+                <div class="section-title section-title--left section-title__control">
+                    <h3 class="section-title__heading section-title__heading--light">как мы работаем</h3>
+                    <h2 class="section-title__heading section-title__heading--primary">
+                        6 шагов <span class="section-title__word">до цели</span> 
+                    </h2>
+                    <!-- /.section-title__heading -->
+                    <h3 class="section-title__heading section-title__heading--light">1/6</h3>
+                    <h2 class="section-title__heading section-title__heading--primary">
+                        Выезд на замеры  <span class="section-title__plese">помещения</span> 
+                    </h2>
+                    <p class="section-title__text section-title__text--light">После вашего звонка мы идем 
+                        к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время 
+                        нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. </p>
+                    <p class="section-title__text section-title__text--light">Оценщик приходит, 
+                        чтобы измерить комнату. Он проконсультирует вас по вопросам техники 
+                        ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных 
+                        ее этапов.
+                        </p>
+                    </div>
+                    <!-- /.sectoin-title -->
+            </div>
+            <!-- /.col-50 -->
+            <div class="col-70"></div>
+            <!-- /.col-50 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
     
+
 </section>
 <!-- /.section steps -->
 <div class="modal">
