--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
           </div>
           <div class="container">
                 <div class="hero__content">
-                  <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону
+                  <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">
+                      Ростове-на-дону
                       </span></h1>
-                  <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                  <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
-                  <button class="button hero__button button--outline" data-toggle="modal">Отправить заявку</button>
+                  <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего 
+                      времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+                  <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость
+                      </button>
+                  <button class="button hero__button button--outline" data-toggle="modal">Отправить заявку
+                      </button>
             </div>
           
         </div>
@@ -51,7 +55,7 @@
       <!-- /.hero__content -->
       <section class="section section--dark prijects">
           <div class="container">
-            <div class="row">
+            <div class="row prijects__row">
                 <div class="col-50">
                     <div class="prijects-title">
                         <h2 class="prijects-title__heading prijects-title__heading--primary">
