--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
             <form action="#" class="form control__form">
                 <div class="control__input-group">
                     <label for="user-name" class="label form__label label__green control__label">Имя</label>
-                    <input type="text" class="input control__input form__input input--green" id="user-name" placeholder="Как вас зовут:">
+                    <input type="text" name="userName" class="input control__input form__input input--green" id="user-name" placeholder="Как вас зовут:">
                 </div>
                 <!-- /.input-group -->
                 <div class="control__input-group">
                     <label for="user-phone" class="label form__label label__green control__label">Телефон</label>
-                    <input type="tel" class="input control__input form__input input--green" id="user-phone" placeholder="Ваш номер телефона:">
+                    <input type="tel" name="userPhone" class="input control__input form__input input--green" id="user-phone" placeholder="Ваш номер телефона:">
                 </div>
                 <!-- /.input-group -->
                 <div class="policy control__policy">
@@ -556,30 +556,30 @@
 <!-- /.modal -->
   </main>
 <footer class="footer section">
-    <div class="container">
+    <div class="container footer__container">
         <div class="footer-wrap">
             <h3 class="footer__title">Остались вопросы?</h3>
             <form action="#" class="form footer__form">
                 <div class="input-group footer__input-group">
-                    <label for="user-name" class="label form__label label__light">Имя</label>
-                <input type="text" class="input footer__input form__input input--light" id="user-name" placeholder="Как вас зовут:">
+                    <label for="user-name" class="label footer__form__label label__light">Имя</label>
+                    <input type="text" name="userName" class="input footer__input form__input input--light" id="user-name" placeholder="Как вас зовут:">
                 </div>
                 <div class="input-group footer__input-group">
-                    <label for="user-phone" class="label form__label label__light">Телефон</label>
-                    <input type="tel" class="input footer__input form__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
+                    <label for="user-phone" class="label footer__form__label label__light">Телефон</label>
+                    <input type="tel" name="userPhone" class="input footer__input form__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
                 </div>
                 <div class="input-group footer__input-group footer__input-group--full-width">
-                    <label for="user-question" class="label form__label label__light">Вопрос</label>
-                <input type="text" class="input footer__input form__input input--light" id="user-question" placeholder="Я хочу спросить:">
+                    <label for="user-question" class="label footer__form__label label__light">Вопрос</label>
+                    <input type="text" name="userQuestion" class="input footer__input form__input input--light" id="user-question" placeholder="Я хочу спросить:">
                 </div>
                      
             </form>
             <!-- /.form footer__form -->
             <div class="policy footer__policy">
                 <input type="checkbox" name="policy-checkbox" class="input policy__checkbox" id="policy-checkbox" checked>
-                <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
+                <label for="policy-checkbox" class="footer__policy__label policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
             </div>
-            <button class="button button--primary footer__button">отправить</button>
+            <button class="button footer__button--primary button--primary footer__button">отправить</button>
         
         </div>
         <!-- /.footer-wrap -->
