feat: in footer google-map

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=688fc761-6f4a-4412-883b-c90d38e1ff45&lang=ru_RU" type="text/javascript">
+    </script>
     <title>Document</title>
 </head>
 <body>
@@ -583,6 +585,20 @@
         
         </div>
         <!-- /.footer-wrap -->
+        <div class="footer__text">
+            <p>Ростов на дону, Торговый центр Plaza<br>
+                Прямой телефон +7 (999) 768 32 99</p>
+        </div>
+        <div class="footer__icon">
+            <img src="img/icon_instagram.svg" class="footer__icon__mail" alt="">
+            <img src="img/icon_mail.svg" alt="">
+        </div>
+        <!-- /.footer__icon -->
+        <!-- /.footer__text -->
+        <div class="map footer__map" id="map">
+
+        </div>
+        <!-- /.map footer__map -->
 
     </div>
     <!-- /.container -->
